--- a/src/styles.css
+++ b/src/styles.css
@@ -5,5 +5,6 @@
  * This is the master style for Aldo, all global stylesheets are loaded here.
  */
 
+@import url('stylesheets/reset.css');
 @import url('stylesheets/style.css');
 
