--- a/src/styles.css
+++ b/src/styles.css
@@ -7,5 +7,6 @@
 
 @import url('stylesheets/reset.css');
 @import url('stylesheets/preloader.css');
+@import url('stylesheets/spinner.css');
 @import url('stylesheets/style.css');
 
