--- a/src/stylesheets/_styles.scss
+++ b/src/stylesheets/_styles.scss
@@ -1,7 +1,5 @@
 *, *:after, *:before {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
+    @include box-sizing(border-box);
 }
 
 [class*='col-'] {
