--- a/src/stylesheets/theme.scss
+++ b/src/stylesheets/theme.scss
@@ -6,7 +6,7 @@
  */
 
 @import 'colors';
-@import 'typography';
+@import 'typo';
 @import '../../node_modules/@angular/material/theming';
 
 @include mat-core();
