--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -49,7 +49,7 @@
 #preloader::after {
     right: 50%;
     animation: animation_right_round 1s infinite ease-in-out;
-    background-color: $primary-fg;
+    background-color: $body-fg;
 }
 
 /* Tablets and phones */
