--- a/src/stylesheets/_styles.scss
+++ b/src/stylesheets/_styles.scss
@@ -11,8 +11,8 @@ a {
 
 body {
     margin: 0;
-    color: $body-fg;
-    background-color: $body-bg;
+    color: white;
+    background-color: black;
 }
 
 md-sidenav-container {
