Minor graphical touchup.

--- a/src/stylesheets/_styles.scss
+++ b/src/stylesheets/_styles.scss
@@ -15,6 +15,10 @@ body {
     background-color: black;
 }
 
+i.material-icons {
+    vertical-align: text-bottom;
+}
+
 md-sidenav-container {
     height: 100vh;
 }
