--- a/src/stylesheets/_spinner.scss
+++ b/src/stylesheets/_spinner.scss
@@ -15,7 +15,7 @@
 .spinner::after {
     position: absolute;
     content: '';
-    background-color: black;
+    background-color: white;
 }
 
 .spinner::before {
