--- a/src/stylesheets/_styles.scss
+++ b/src/stylesheets/_styles.scss
@@ -11,8 +11,8 @@ a {
 
 body {
     margin: 0;
-    color: white;
-    background-color: black;
+    color: black;
+    background-color: white;
 }
 
 i.material-icons {
